# vllm-ascend

csrc/: build_aclnn.sh  torch_binding.cpp  torch_binding_meta.cpp
csrc/dispatch_ffn_combine/op_kernel/utils/: moe_distribute_base.h
csrc/hamming_dist_top_k/hamming_dist_top_k/op_host/: CMakeLists.txt  aclnn_hamming_dist_top_k.cpp  aclnn_hamming_dist_top_k.h  hamming_dist_top_k.cpp  hamming_dist_top_k.h  hamming_dist_top_k_def.cpp  hamming_dist_top_k_split.cpp  hamming_dist_top_k_split.h  hamming_dist_top_k_tiling.cpp
csrc/hamming_dist_top_k/op_host/: CMakeLists.txt  hamming_dist_top_k.cpp  hamming_dist_top_k.h  hamming_dist_top_k_def.cpp  hamming_dist_top_k_tiling.cpp  hamming_dist_top_k_tiling.h
csrc/hamming_dist_top_k/op_kernel/: hamming_dist_top_k.cpp  hamming_dist_top_k_base.h  hamming_dist_top_k_parallel.h  hamming_dist_top_k_split_s.h
csrc/utils/inc/kernel/: moe_distribute_base.h
examples/sp_cp_test/: run_server.sh  vllm_chunk_cp.py  vllm_infer.py
tests/kvcomp/: test.py  test_hamming.py  test_hamming_gqa.py  test_hamming_graph.py  test_hamming_mla.py  test_reshape.py
tools/: compare_chunked_vs_base.py
vllm_ascend/: ascend_config.py  ascend_forward_context.py  envs.py  platform.py  utils.py
vllm_ascend/attention/: attention_v1.py  hash_encoder.py  kv_compress.py  kvcomp_sparse_attention_v1.py  mla_v1.py  utils.py
vllm_ascend/compilation/: acl_graph.py
vllm_ascend/core/: schedule_config.py  scheduler.py
vllm_ascend/distributed/: llmdatadist_c_mgr_connector.py  mooncake_connector.py  parallel_state.py
vllm_ascend/expert_offload/: expert_offload_manager.py
vllm_ascend/models/: deepseek_v2.py
vllm_ascend/ops/: fused_moe.py  rotary_embedding.py  vocab_parallel_embedding.py
vllm_ascend/ops/fused_moe/: fused_moe.py
vllm_ascend/spec_decode/: mtp_proposer.py
vllm_ascend/worker/: block_table.py  kvcomp_utils.py  model_runner_v1.py  npu_input_batch.py  worker_v1.py
vllm_ascend/worker/kvcomp_configs/: KVComp_Qwen3_32B_config.json
(+5 files in other folders)
